--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   lottie: ^2.6.0
   animated_splash_screen: ^1.3.0
   email_validator: ^2.1.17
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
