--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   email_validator: ^2.1.17
   provider: ^6.0.5
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
