--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.1.0
   shared_preferences: ^2.2.2
   jwt_decoder: ^2.0.1
+  animated_emoji: ^2.0.0
 
 dev_dependencies:
   flutter_test:
