--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.2.2
   jwt_decoder: ^2.0.1
   animated_emoji: ^2.0.0
+  ionicons: ^0.2.2
 
 dev_dependencies:
   flutter_test:
